# shakedown

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  conftest.py  pyproject.toml  run-loop  shakedown  shakedown-dev  shakedown.spl
.agent/: blockers.md
.githooks/: commit-msg  pre-commit
docs/: README.md  lineage.md  prompt-shakedown.md  ralph-loop.md  verification-plan.md
docs/architecture/: cache-spike.md  decision-rubric.md  encoding-and-scope.md  inherited-scaffold.md  runtime-boundary.md  selected-architecture.md
docs/markdown/: fixtures.md  (+9 more)
scripts/: assemble.py  cache_spike.py  codegen_html.py  count_reference_defs.py  generate_spl_cost_fixtures.py  literary_surfaces.py  markdown_pl_parity_audit.py  measure_spl_cost.py  shakedown_run.py  strict_parity_harness.py
src/: 00-preamble.spl  10-act1-preprocess.spl  10-phase1-read.spl  20-act2-block.spl  20-phase2-block.spl  30-act3-span.spl  30-phase3-inline.spl  40-act4-emit.spl  99-smoke.spl  literary.toml  manifest.toml
tests/: test_architecture_spikes.py  test_assemble.py  test_binary_contract.py  test_codegen_html.py  test_iconic_moments.py  test_literary_compliance.py  test_literary_spec_probes.py  test_literary_surfaces.py  test_literary_toml_schema.py  test_markdown_pl_parity_audit.py  test_mdtest.py  test_measure_spl_cost.py  test_pre_design_probes.py  test_prompt_literary_protocol.py  test_roadmap_contract.py  test_run_loop.py  test_shakedown_run.py  test_slice1_amps_angle.py  test_spl_layout_smoke.py  test_spl_style_guide_validation.py  test_strict_parity_harness.py  test_token_codes.py
(+117 files in other folders)
