[project]
name = "shakedown"
version = "0.1.0"
description = "A port of John Gruber's Markdown.pl to SPL"
requires-python = ">=3.12"
dependencies = [
    "shakespearelang>=0.6",
]

[dependency-groups]
dev = [
    "commitizen>=4.0",
    "git-cliff>=2.0",
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$version"
bump_message = "chore: bump version to $new_version"
update_changelog_on_bump = false

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
